# my-test-tuxpkg-project

./: .gitignore  Dockerfile.ci-archlinux  Dockerfile.ci-fedora  LICENSE  Makefile  README.md  my-test-tuxpkg-project.PKGBUILD  my-test-tuxpkg-project.spec  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  rules
my_test_tuxpkg_project/: __init__.py  __main__.py
test/: test_my_test_tuxpkg_project.py
