[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "my_test_tuxpkg_project"
authors = [{name = "Anders Roxell", email = "anders.roxell@linaro.org"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.scripts]
my-test-tuxpkg-project = "my_test_tuxpkg_project:main"

[project.urls]
Home = "http://github.com/roxell/my-test-tuxpkg-project"

[tool.flit.sdist]
include = ["test/", "*.spec"]
